--- a/index.html
+++ b/index.html
@@ -3,125 +3,324 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Patient Management System</title>
+    <title>FutureCare: Patient Management System</title>
     <style>
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-family: 'Poppins', -apple-system, BlinkMacSystemFont, sans-serif;
         }
 
         body {
-            background-color: #f0f4f8;
-            padding: 20px;
+            background: linear-gradient(135deg, #d6e6ff 0%, #e6f0fa 100%);
+            padding: 40px;
+            transition: background 0.3s;
+        }
+
+        body.dark-mode {
+            background: linear-gradient(135deg, #1a2639 0%, #2d4059 100%);
         }
 
         .container {
-            max-width: 1200px;
+            max-width: 1500px;
             margin: 0 auto;
-            background: #fff;
-            border-radius: 10px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            background: #ffffff;
+            border-radius: 20px;
+            box-shadow: 0 10px 40px rgba(0, 0, 0, 0.15);
+            padding: 40px;
+            position: relative;
+            transition: background 0.3s;
+        }
+
+        body.dark-mode .container {
+            background: #26344e;
+        }
+
+        .welcome-banner {
+            background: linear-gradient(90deg, #3498db, #2980b9);
+            color: #fff;
             padding: 20px;
+            border-radius: 12px;
+            text-align: center;
+            margin-bottom: 30px;
+            animation: fadeIn 1s ease-in;
+        }
+
+        .welcome-banner h2 {
+            font-size: 1.8rem;
+            font-weight: 600;
+        }
+
+        .welcome-banner p {
+            font-size: 1rem;
+            opacity: 0.9;
+        }
+
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(-20px); }
+            to { opacity: 1; transform: translateY(0); }
         }
 
         h1 {
             text-align: center;
-            color: #2c3e50;
-            margin-bottom: 20px;
+            color: #1a3c34;
+            font-size: 2.8rem;
+            font-weight: 700;
+            margin-bottom: 40px;
+            letter-spacing: 1.5px;
+        }
+
+        body.dark-mode h1 {
+            color: #e6e9ff;
+        }
+
+        .theme-toggle {
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            background: #3498db;
+            color: #fff;
+            border: none;
+            padding: 12px 24px;
+            border-radius: 30px;
+            cursor: pointer;
+            font-size: 0.9rem;
+            font-weight: 500;
+            transition: background 0.3s, transform 0.2s;
+        }
+
+        .theme-toggle:hover {
+            background: #2980b9;
+            transform: scale(1.05);
         }
 
         .dashboard {
             display: grid;
-            grid-template-columns: 1fr 1fr 1fr;
-            gap: 20px;
-            margin-bottom: 20px;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 25px;
+            margin-bottom: 40px;
         }
 
         .card {
-            background: #3498db;
-            color: #fff;
-            padding: 15px;
-            border-radius: 8px;
+            background: #f7fafc;
+            border-radius: 16px;
+            padding: 25px;
             text-align: center;
-            transition: transform 0.2s;
+            transition: transform 0.3s, box-shadow 0.3s;
+            position: relative;
+            cursor: pointer;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+        }
+
+        body.dark-mode .card {
+            background: #334155;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
         }
 
         .card:hover {
-            transform: translateY(-5px);
+            transform: translateY(-10px);
+            box-shadow: 0 12px 24px rgba(0, 0, 0, 0.2);
         }
 
         .card h3 {
-            margin-bottom: 10px;
+            color: #2d3748;
+            font-size: 1.3rem;
+            font-weight: 600;
+            margin-bottom: 12px;
+        }
+
+        body.dark-mode .card h3 {
+            color: #e6e9ff;
+        }
+
+        .card p {
+            color: #3498db;
+            font-size: 2.5rem;
+            font-weight: 700;
+            animation: countUp 1s ease-in-out;
+        }
+
+        body.dark-mode .card p {
+            color: #60a5fa;
+        }
+
+        @keyframes countUp {
+            from { transform: scale(0.8); opacity: 0.5; }
+            to { transform: scale(1); opacity: 1; }
+        }
+
+        .tooltip {
+            position: absolute;
+            top: -50px;
+            left: 50%;
+            transform: translateX(-50%);
+            background: #2d3748;
+            color: #fff;
+            padding: 8px 12px;
+            border-radius: 8px;
+            font-size: 0.85rem;
+            opacity: 0;
+            transition: opacity 0.3s, transform 0.3s;
+            pointer-events: none;
+            z-index: 10;
+        }
+
+        .card:hover .tooltip {
+            opacity: 1;
+            transform: translateX(-50%) translateY(-5px);
         }
 
         .form-section, .patient-list, .bed-allocation {
-            margin-bottom: 20px;
+            background: #f7fafc;
+            border-radius: 16px;
+            padding: 25px;
+            margin-bottom: 25px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+        }
+
+        body.dark-mode .form-section,
+        body.dark-mode .patient-list,
+        body.dark-mode .bed-allocation {
+            background: #334155;
         }
 
         .form-section h2, .patient-list h2, .bed-allocation h2 {
-            color: #2c3e50;
-            margin-bottom: 10px;
+            color: #1a3c34;
+            font-size: 1.6rem;
+            font-weight: 600;
+            margin-bottom: 20px;
+        }
+
+        body.dark-mode .form-section h2,
+        body.dark-mode .patient-list h2,
+        body.dark-mode .bed-allocation h2 {
+            color: #e6e9ff;
         }
 
         .form-group {
-            margin-bottom: 15px;
+            margin-bottom: 20px;
+            position: relative;
         }
 
         .form-group label {
             display: block;
-            margin-bottom: 5px;
-            color: #34495e;
+            margin-bottom: 8px;
+            color: #2d3748;
+            font-weight: 500;
+        }
+
+        body.dark-mode .form-group label {
+            color: #e6e9ff;
         }
 
         .form-group input, .form-group select {
             width: 100%;
-            padding: 8px;
-            border: 1px solid #bdc3c7;
-            border-radius: 5px;
-            font-size: 14px;
+            padding: 12px 16px;
+            border: none;
+            border-radius: 10px;
+            font-size: 1rem;
+            background: #ffffff;
+            box-shadow: inset 0 2px 6px rgba(0, 0, 0, 0.05);
+            transition: box-shadow 0.3s;
+        }
+
+        body.dark-mode .form-group input,
+        body.dark-mode .form-group select {
+            background: #4b5e76;
+            color: #e6e9ff;
+        }
+
+        .form-group input:focus, .form-group select:focus {
+            outline: none;
+            box-shadow: 0 0 0 3px rgba(52, 152, 219, 0.3);
         }
 
         button {
-            background: #2ecc71;
+            background: linear-gradient(90deg, #2ecc71, #27ae60);
             color: #fff;
             border: none;
-            padding: 10px 20px;
-            border-radius: 5px;
+            padding: 14px 28px;
+            border-radius: 10px;
             cursor: pointer;
-            transition: background 0.2s;
+            font-size: 1rem;
+            font-weight: 600;
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            transition: transform 0.2s, box-shadow 0.2s;
         }
 
         button:hover {
-            background: #27ae60;
+            transform: translateY(-3px);
+            box-shadow: 0 6px 16px rgba(0, 0, 0, 0.2);
+        }
+
+        button svg {
+            width: 18px;
+            height: 18px;
+        }
+
+        .download-btn {
+            background: linear-gradient(90deg, #3498db, #2980b9);
+            margin-top: 20px;
+        }
+
+        .download-btn:hover {
+            background: linear-gradient(90deg, #2980b9, #1f6391);
         }
 
         table {
             width: 100%;
             border-collapse: collapse;
-            margin-top: 10px;
+            margin-top: 20px;
         }
 
         th, td {
-            padding: 10px;
+            padding: 14px;
             text-align: left;
-            border-bottom: 1px solid #ecf0f1;
+            border-bottom: 1px solid #e2e8f0;
+        }
+
+        body.dark-mode th,
+        body.dark-mode td {
+            border-bottom: 1px solid #4b5e76;
         }
 
         th {
-            background: #3498db;
+            background: linear-gradient(90deg, #3498db, #2980b9);
             color: #fff;
+            font-weight: 600;
+        }
+
+        body.dark-mode th {
+            background: linear-gradient(90deg, #2563eb, #1e40af);
+        }
+
+        td {
+            color: #2d3748;
+        }
+
+        body.dark-mode td {
+            color: #e6e9ff;
         }
 
         .status-critical {
-            color: #e74c3c;
-            font-weight: bold;
+            color: #e53e3e;
+            font-weight: 600;
         }
 
         .status-stable {
             color: #2ecc71;
-            font-weight: bold;
+            font-weight: 600;
+        }
+
+        .action-btn {
+            background: linear-gradient(90deg, #e53e3e, #c53030);
+        }
+
+        .action-btn:hover {
+            background: linear-gradient(90deg, #c53030, #9b2c2c);
         }
 
         @media (max-width: 768px) {
@@ -130,28 +329,49 @@
             }
 
             .container {
-                padding: 10px;
+                padding: 20px;
+            }
+
+            h1 {
+                font-size: 2rem;
+            }
+
+            button {
+                width: 100%;
+                justify-content: center;
+            }
+
+            .welcome-banner h2 {
+                font-size: 1.4rem;
             }
         }
     </style>
 </head>
 <body>
+    <button class="theme-toggle" onclick="toggleTheme()">Toggle Dark Mode</button>
     <div class="container">
-        <h1>Patient Management System</h1>
+        <div class="welcome-banner">
+            <h2>Welcome to FutureCare</h2>
+            <p>Streamlining patient flow, optimizing bed allocation, and reducing waiting times for better healthcare.</p>
+        </div>
+        <h1>FutureCare: Patient Management System</h1>
 
         <!-- Dashboard -->
         <div class="dashboard">
             <div class="card">
                 <h3>Total Patients</h3>
                 <p id="total-patients">0</p>
+                <span class="tooltip">Tracks all patients currently managed by the system</span>
             </div>
             <div class="card">
                 <h3>Beds Available</h3>
                 <p id="beds-available">10</p>
+                <span class="tooltip">Shows real-time bed availability for efficient allocation</span>
             </div>
             <div class="card">
                 <h3>Avg. Waiting Time</h3>
                 <p id="avg-waiting-time">0 min</p>
+                <span class="tooltip">Average time patients wait, ensuring faster care</span>
             </div>
         </div>
 
@@ -159,7 +379,7 @@
         <div class="form-section">
             <h2>Add New Patient</h2>
             <div class="form-group">
-                <label for="patient-name">Name</label>
+                <label for="patient-name">Patient Name</label>
                 <input type="text" id="patient-name" placeholder="Enter patient name">
             </div>
             <div class="form-group">
@@ -177,7 +397,12 @@
                     <option value="Low">Low</option>
                 </select>
             </div>
-            <button onclick="addPatient()">Add Patient</button>
+            <button onclick="addPatient()">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4" />
+                </svg>
+                Add Patient
+            </button>
         </div>
 
         <!-- Patient List -->
@@ -196,6 +421,12 @@
                 </thead>
                 <tbody id="patient-table-body"></tbody>
             </table>
+            <button class="download-btn" onclick="downloadSummary()">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4" />
+                </svg>
+                Download Summary
+            </button>
         </div>
 
         <!-- Bed Allocation -->
@@ -205,10 +436,14 @@
                 <label for="bed-number">Assign Bed</label>
                 <select id="bed-number">
                     <option value="">Select Bed</option>
-                    <!-- Dynamically populated -->
                 </select>
             </div>
-            <button onclick="assignBed()">Assign Bed</button>
+            <button onclick="assignBed()">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+                </svg>
+                Assign Bed
+            </button>
         </div>
     </div>
 
@@ -216,6 +451,11 @@
         let patients = [];
         let beds = Array(10).fill(null); // 10 beds, null means available
         let totalBeds = 10;
+
+        // Theme toggle
+        function toggleTheme() {
+            document.body.classList.toggle('dark-mode');
+        }
 
         // Initialize bed dropdown
         function updateBedDropdown() {
@@ -297,6 +537,18 @@
             });
         }
 
+        // Download summary
+        function downloadSummary() {
+            const summary = `FutureCare Patient Summary\n\nTotal Patients: ${patients.length}\nBeds Available: ${beds.filter(b => !b).length}\nAverage Waiting Time: ${patients.length ? (patients.reduce((sum, p) => sum + p.waitingTime, 0) / patients.length).toFixed(1) : 0} min\n\nPatient List:\n${patients.map(p => `Name: ${p.name}, Condition: ${p.condition}, Priority: ${p.priority}, Waiting Time: ${p.waitingTime} min, Bed: ${p.bed || 'None'}`).join('\n')}`;
+            const blob = new Blob([summary], { type: 'text/plain' });
+            const url = URL.createObjectURL(blob);
+            const a = document.createElement('a');
+            a.href = url;
+            a.download = 'FutureCare_Summary.txt';
+            a.click();
+            URL.revokeObjectURL(url);
+        }
+
         // Update UI
         function updateUI() {
             calculateWaitingTime();
@@ -320,7 +572,12 @@
                     <td>${patient.priority}</td>
                     <td>${patient.waitingTime} min</td>
                     <td>${patient.bed || 'None'}</td>
-                    <td><button onclick="removePatient(${patient.id})">Discharge</button></td>
+                    <td><button class="action-btn" onclick="removePatient(${patient.id})">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+                        </svg>
+                        Discharge
+                    </button></td>
                 `;
                 tableBody.appendChild(row);
             });
